<resources>
    <string name="app_name">Admin</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_see_complaints">See complaints</string>
    <string name="menu_manage_client">Manage Clients</string>
    <string name="menu_delete_complaint">Delete complaint</string>
    <string name="menu_modify_client">Modify Client</string>
    <string name="menu_add_client">Add Client</string>
    <string name="menu_delete_client">Delete Client</string>

    <string name="menu_see_clients">See Clients</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>